<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@drawable/background_app">


    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerInside"
        android:background="@drawable/logo_mathbattle" />


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/layout_easy"
       android:layout_below="@+id/logo_iv">

    <Button
        android:id="@+id/onePlayerEasy"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:lineSpacingExtra="6dp"
        android:text="1P"
        android:textAlignment="center"
        android:textSize="26sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black" />

       <TextView
           android:id="@+id/easy_level"
           android:layout_width="80dp"
           android:layout_height="wrap_content"
           android:layout_below="@+id/logo_iv"
           android:layout_centerHorizontal="true"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginBottom="10dp"
           android:layout_weight="2"
           android:fontFamily="@font/paprika"
           android:lineSpacingExtra="6dp"
           android:text="@string/easy"
           android:textAlignment="center"
           android:textAllCaps="false"
           android:textColor="@color/black"
           android:textSize="36sp" />

    <Button
        android:id="@+id/twoPlayerEasy"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:layout_below="@+id/logo_iv"
        android:background="@drawable/bgbuttons"
        android:lineSpacingExtra="6dp"
        android:text="2P"
        android:textAlignment="center"
        android:textSize="26sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black" />
   </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/layout_medium"
        android:layout_below="@+id/layout_easy">

        <Button
            android:id="@+id/onePlayerMid"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/white"

            android:background="@drawable/bgbuttons"
            android:lineSpacingExtra="6dp"
            android:text="1P"
            android:textAlignment="center"
            android:textSize="26sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/med_level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_iv"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:fontFamily="@font/paprika"
            android:lineSpacingExtra="6dp"
            android:text="@string/medium"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <Button
            android:id="@+id/twoPlayerMid"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:layout_below="@+id/logo_iv"
            android:background="@drawable/bgbuttons"
            android:lineSpacingExtra="6dp"
            android:text="2P"
            android:textAlignment="center"
            android:textSize="26sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:id="@+id/layout_hard"
        android:layout_below="@+id/layout_medium">

        <Button
            android:id="@+id/onePlayerHard"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:background="@drawable/bgbuttons"
            android:lineSpacingExtra="6dp"
            android:text="1P"
            android:textAlignment="center"
            android:textSize="26sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/hard_level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_iv"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:fontFamily="@font/paprika"
            android:lineSpacingExtra="6dp"
            android:text="@string/hard"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <Button
            android:id="@+id/twoPlayerHard"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:layout_below="@+id/logo_iv"
            android:background="@drawable/bgbuttons"
            android:lineSpacingExtra="6dp"
            android:text="2P"
            android:textAlignment="center"
            android:textSize="26sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black" />
    </LinearLayout>









    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/top_table_activity"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_hard"
        android:background="@drawable/bgbuttons"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/best_players"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/sound_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="140dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/musicBtn"
            android:layout_width="60dp"
            android:layout_height="68dp"
            android:backgroundTint="@color/white"
            android:layout_marginTop="20dp" />
    </LinearLayout>
    </FrameLayout>

</RelativeLayout>